<resources>
    <string name="app_name">FoodHub</string>
    <string name="Welcome">Welcome</string>
    <string name="or">or</string>
    <string name="Back">Back</string>
    <string name="Login">Login</string>
    <string name="CLogin">Customer Login</string>
    <string name="FLogin">Firm Login</string>
    <string name="ALogin">Admin Login</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Logout">Logout</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="Password">Password</string>
    <string name="FoodHub">FoodHub</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Home">Home</string>
    <string name="Admins">Admins</string>
    <string name="Menu">Menu</string>
    <string name="Orders">Orders</string>
    <string name="Account">Account</string>
    <string name="Add_Admin">Add Admin</string>
    <string name="Add_Firm">Add Firm</string>
    <string name="Add_Category">Add Category</string>
    <string name="Add_Item">Add Item</string>
    <string name="Edit_Admin">Edit Admin</string>
    <string name="Edit_Firm">Edit Firm</string>
    <string name="Edit_Category">Edit Category</string>
    <string name="Edit_Item">Edit Item</string>
    <string name="Firm">Firm</string>
    <string name="Id">Id</string>
    <string name="Total">Total</string>
    <string name="Status">Status</string>
    <string name="Discard">Discard</string>
    <string name="Customer">Customer</string>
    <string name="Firms">Firms</string>
    <string name="Username">Username</string>
    <string name="Cuisine">Cuisine</string>
    <string name="Open_Time">Open Time</string>
    <string name="Close_Time">Close Time</string>
    <string name="Employee_Count">Employee Count</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Add">Add</string>
    <string name="Submit">Submit</string>
    <string name="Upload_Image">Upload Image</string>
    <string name="Cancel_Order">Cancel Order</string>
    <string name="View_Order">View Order</string>
    <string name="In_Progress">In Progress</string>
    <string name="Complete">Complete</string>
    <string name="Chat">Chat</string>
    <string name="Obsolete">Obsolete</string>
    <string name="Jeopardized">Jeopardized</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
