<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">

        <TextView
            android:id="@+id/firm_order_customer_text"
            android:layout_width="118dp"
            android:layout_height="23dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/Customer"
            android:textColor="@color/purple_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firm_order_id_text"
            android:layout_width="97dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/Id"
            app:layout_constraintStart_toEndOf="@+id/firm_order_customer_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firm_order_total_text"
            android:layout_width="113dp"
            android:layout_height="21dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/Total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firm_order_customer_text" />

        <TextView
            android:id="@+id/firm_order_location_text"
            android:layout_width="98dp"
            android:layout_height="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/Location"
            app:layout_constraintStart_toEndOf="@+id/firm_order_total_text"
            app:layout_constraintTop_toBottomOf="@+id/firm_order_id_text" />

        <Button
            android:id="@+id/firm_order_complete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/Complete"
            app:layout_constraintStart_toEndOf="@+id/firm_order_location_text"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/firm_order_chat_button"
            android:layout_width="115dp"
            android:layout_height="47dp"
            android:layout_marginStart="12dp"
            android:text="@string/Chat"
            app:layout_constraintStart_toEndOf="@+id/firm_order_location_text"
            app:layout_constraintTop_toBottomOf="@+id/firm_order_complete_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/firm_order_recycler"
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firm_order_location_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>