<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">

        <TextView
            android:id="@+id/customer_order_firm_text"
            android:layout_width="118dp"
            android:layout_height="23dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/Firm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/customer_order_id_text"
            android:layout_width="97dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/Id"
            app:layout_constraintStart_toEndOf="@+id/customer_order_firm_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/customer_order_total_text"
            android:layout_width="113dp"
            android:layout_height="21dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/Total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_order_firm_text" />

        <TextView
            android:id="@+id/customer_order_status_text"
            android:layout_width="98dp"
            android:layout_height="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/Status"
            app:layout_constraintStart_toEndOf="@+id/customer_order_total_text"
            app:layout_constraintTop_toBottomOf="@+id/customer_order_id_text" />

        <Button
            android:id="@+id/customer_order_discard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/Discard"
            app:layout_constraintStart_toEndOf="@+id/customer_order_status_text"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customer_order_recycler"
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_order_status_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>